# OC-P12

./: .flake8  .gitignore  constants.py  main.py  pyproject.toml  readme.md
config/: config.py  logo.py  prompts.py  simple_contents.py  titles.py
controllers/: authentication.py  base.py  db.py  models.py  mysql.py  permission.py  permissions.py  session.py
database/: mysql.py
flake8-html/: index.html
models/: clients.py  contracts.py  departments.py  events.py  permissions.py
tests/: conftest.py
tests/integration/: func.py  test_commercial.py  test_failed.py  test_management.py  test_support.py
tests/units/: test_authentication.py  test_controller.py  test_mysql.py  test_permission.py
views/: prompt.py  show.py
