[project]
name = "epicevent"
version = "0.1.0"
description = ""
authors = [
    {name = "Anthony YOU",email = "spleen85@proton.me"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-sqlalchemy-mock (>=0.1.7,<0.2.0)",
    "pytest-cov (>=6.1.1,<7.0.0)",
    "argon2-cffi (>=23.1.0,<24.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "rich (>=14.0.0,<15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
