[tool.poetry]
name = "epicevent"
version = "0.1.0"
description = ""
authors = ["Anthony YOU <spleen85@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
sqlalchemy = "^2.0.49"
pymysql = "^1.1.2"
python-dotenv = "^1.2.2"
pytest = "^9.0.3"
pytest-sqlalchemy-mock = "^0.1.7"
pytest-cov = "^7.1.0"
argon2-cffi = "^25.1.0"
pyjwt = "^2.12.1"
rich = "^15.0.0"
sentry-sdk = "^2.58.0"
flake8 = "^7.3.0"
flake8-html = "^0.4.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
